# sd-webui-watermark-studio

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  config.json  extension.txt  install.py  preload.py  pyproject.toml  requirements.txt  style.css  test_extension.py  version.py
assets/: .gitkeep
cache/: .gitkeep
javascript/: watermark_studio.js
scripts/: __init__.py  load_fonts.py  preload.py  watermark_studio.py  watermark_studio_tab.py  watermark_utils.py
temp/: .gitkeep
templates/: default.json  signature.json
