[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sd-webui-watermark-studio"
version = "1.0.0"
description = "Professional watermarking capabilities for AUTOMATIC1111 Stable Diffusion WebUI"
readme = "README.md"
license = {text = "Unlicense"}
authors = [
    {name = "Watermark Studio Team", email = "support@watermarkstudio.dev"},
]
keywords = ["stable-diffusion", "webui", "extension", "watermark", "image-processing"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: Public Domain",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: JavaScript",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=5.0",
    "mypy>=0.991",
]
enhanced = [
    "numpy>=1.21.0",
    "opencv-python>=4.5.0", 
    "fonttools>=4.0.0",
    "matplotlib>=3.5.0",
]

[project.urls]
Homepage = "https://github.com/dterracino/sd-webui-watermark-studio"
Repository = "https://github.com/dterracino/sd-webui-watermark-studio.git"
Issues = "https://github.com/dterracino/sd-webui-watermark-studio/issues"
Changelog = "https://github.com/dterracino/sd-webui-watermark-studio/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*", "javascript*"]

[tool.setuptools.package-data]
"*" = ["*.js", "*.css", "*.json", "*.md", "*.txt"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | temp
  | cache
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true